# alidraw

./: Cargo.toml  build-all.sh
src/: app.rs  app_icon.rs  brush.rs  canvas.rs  canvas_raster.rs  dialog.rs  error.rs  export.rs  history.rs  icons.rs  import.rs  main.rs  palette.rs  toolbar.rs
src/toolbar/: brush_size.rs  footer.rs  header.rs  mod.rs  palette.rs  tools.rs
