[package]
name = "alidraw"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34"
egui = "0.34"
tiny-skia = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.17"
thiserror = "2"
winit = "0.30"
lucide-icons = "1"

[profile.release]
opt-level = 2
strip = true
